Remove some test code
