# src/PhoneBox.Server/SignalR/TelephonyHubWorker.cs
@@ -1,28 +1,0 @@
-﻿using System.Threading;
-using System.Threading.Tasks;
-using Microsoft.AspNetCore.SignalR;
-using Microsoft.Extensions.Hosting;
-using PhoneBox.Abstractions;
-
-namespace PhoneBox.Server.SignalR
-{
-    internal sealed class TelephonyHubWorker : BackgroundService
-    {
-        private readonly IHubContext<TelephonyHub, ITelephonyHub> _hub;
-
-        public TelephonyHubWorker(IHubContext<TelephonyHub, ITelephonyHub> hub)
-        {
-            _hub = hub;
-        }
-
-        protected override async Task ExecuteAsync(CancellationToken stoppingToken)
-        {
-            while (!stoppingToken.IsCancellationRequested)
-            {
-                string phoneNumber = "101";
-                await _hub.Clients.User(phoneNumber).SendMessage("Hey there:" + phoneNumber).ConfigureAwait(false);
-                await Task.Delay(1000, stoppingToken).ConfigureAwait(false);
-            }
-        }
-    }
-}
